# shgo-rs

./: Cargo.toml  README.md  python_shgo_tests.py
examples/: basic_rosen.rs  c_call_example.c  cattle_feed_dict.rs  cattle_feed_structured.rs  cpp_call_example.cpp  rastrigin_extra_parameters.rs  rastrigin_fake_long.rs  rastrigin_partial.rs
include/: shgo_rs.h  shgo_rs.hpp
src/: constraints.rs  ffi.rs  lib.rs  main.rs  options.rs  pybridge.rs  results.rs  shgo.rs
